[package]
name = "enet-rs"
authors = ["ZTz"]
description = "A ENet library for Rust."
version = "1.3.171"
readme = "README.md"
license = "ISC"
documentation = "https://docs.rs/enet-rs"
repository = "https://github.com/ZTzTopia/enet-rs"
edition = "2018"
include = ["src/**/*", "vendor/**/*", "build.rs", "README.md", "LICENSE.md"]

[dependencies.libc]
version = "0.2.101"

[build-dependencies.cmake]
version = "0.1.45"